Adding controller changes